{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 75,
  "lineage": "ff0c4096-b006-a939-2667-ca779435c0cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-4318A263",
            "domain": "vpc",
            "id": "eipalloc-4318A263",
            "public_dns": "ec2-185-102-122-54.ru-msk.compute.k2.cloud",
            "public_ip": "185.102.122.54",
            "public_ipv4_pool": "default",
            "tags": {
              "Name": "webapp"
            },
            "tags_all": {
              "Name": "webapp"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vms",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "affinity": "default",
            "ami": "cmi-2C632E61",
            "arn": "arn:c2:ec2::MShcherbachenko@sales.croc.ru:instance/i-6CD68D20",
            "associate_public_ip_address": false,
            "availability_zone": "ru-msk-vol51",
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "disk1",
                "encrypted": false,
                "iops": 320,
                "tags": {
                  "Name": "Disk for webapp"
                },
                "throughput": 0,
                "volume_id": "vol-CAAB36C0",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-6CD68D20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5gl20.small",
            "ipv6_address_count": 0,
            "key_name": "My SSH Key",
            "monitoring": true,
            "primary_network_interface_id": "eni-A4317260",
            "private_dns": "ip-10-0-0-4.vpc-fadaa2e2.internal",
            "private_ip": "10.0.0.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "disk1",
                "encrypted": false,
                "iops": 320,
                "tags": {
                  "Name": "Disk for webapp"
                },
                "throughput": 0,
                "volume_id": "vol-CAAB36C0",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2E810B40",
            "tags": {
              "Name": "VM for webapp"
            },
            "tags_all": {
              "Name": "VM for webapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-C748F9B6",
              "sg-FF6E3E8F"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.pubkey",
            "aws_security_group.ext",
            "aws_security_group.int",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "affinity": "default",
            "ami": "cmi-2C632E61",
            "arn": "arn:c2:ec2::MShcherbachenko@sales.croc.ru:instance/i-58311660",
            "associate_public_ip_address": false,
            "availability_zone": "ru-msk-vol51",
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "disk1",
                "encrypted": false,
                "iops": 320,
                "tags": {
                  "Name": "Disk for db"
                },
                "throughput": 0,
                "volume_id": "vol-D12CFA60",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-58311660",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5gl20.small",
            "ipv6_address_count": 0,
            "key_name": "My SSH Key",
            "monitoring": true,
            "primary_network_interface_id": "eni-1D2F2500",
            "private_dns": "ip-10-0-0-5.vpc-fadaa2e2.internal",
            "private_ip": "10.0.0.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "disk1",
                "encrypted": false,
                "iops": 320,
                "tags": {
                  "Name": "Disk for db"
                },
                "throughput": 0,
                "volume_id": "vol-D12CFA60",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2E810B40",
            "tags": {
              "Name": "VM for db"
            },
            "tags_all": {
              "Name": "VM for db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-C748F9B6",
              "sg-FF6E3E8F"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.pubkey",
            "aws_security_group.ext",
            "aws_security_group.int",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:c2:ec2:ru-msk:MShcherbachenko@sales.croc.ru:internet-gateway/igw-C0D1EB88",
            "id": "igw-C0D1EB88",
            "owner_id": "MShcherbachenko@sales.croc.ru",
            "tags": {
              "Name": "IGW for Test-project 1.0"
            },
            "tags_all": {
              "Name": "IGW for Test-project 1.0"
            },
            "vpc_id": "vpc-FADAA2E2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-C0D1EB88",
            "id": "r-rtb-FBC9781F1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-FBC9781F",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:c2:ec2:ru-msk:MShcherbachenko:security-group/sg-C748F9B6",
            "description": "External SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-C748F9B6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext",
            "name_prefix": "",
            "owner_id": "MShcherbachenko",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "External SG"
            },
            "tags_all": {
              "Name": "External SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-FADAA2E2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:c2:ec2:ru-msk:MShcherbachenko:security-group/sg-FF6E3E8F",
            "description": "Internal SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-FF6E3E8F",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "int",
            "name_prefix": "",
            "owner_id": "MShcherbachenko",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal SG"
            },
            "tags_all": {
              "Name": "Internal SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-FADAA2E2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ru-msk-vol51",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-2E810B40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "tags": {
              "Name": "Subnet in ru-msk-vol51 for Test-project 1.0"
            },
            "tags_all": {
              "Name": "Subnet in ru-msk-vol51 for Test-project 1.0"
            },
            "vpc_id": "vpc-FADAA2E2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"hc-registry.website.k2.cloud/c2devel/rockitcloud\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:c2:ec2:ru-msk::vpc/vpc-FADAA2E2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-A125E2B6",
            "default_route_table_id": "rtb-FBC9781F",
            "default_security_group_id": "sg-DEC03B90",
            "dhcp_options_id": "default",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-FADAA2E2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-FBC9781F",
            "tags": {
              "Name": "Test-project 1.0"
            },
            "tags_all": {
              "Name": "Test-project 1.0"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}